--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="<script src="https://cdn.jsdelivr.net/gh/Wake-eater/ghl-meta-sync@main/app.js"></script>
     <script src="app.js"></script>
 
 </body>
