--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    
+<script>
+console.log('=== TEST: JavaScript is working ===');
+alert('JavaScript loaded successfully!');
+</script>
     <div class="container my-5">
         <h1 class="text-center mb-4">Meta Audience Sync</h1>
 
